--- a/MarbellaCherrys/core/templates/core/base.html
+++ b/MarbellaCherrys/core/templates/core/base.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stock Manager - Sistema de Gestión de Inventario</title>
-  <link rel="stylesheet" href="styles.css">
   <!-- Fuente Poppins de Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -127,7 +126,10 @@
     </aside>
 
     <!-- Main Content -->
-    {% block content %}{% endblock %}
+     <div style="margin-left: 20%;">
+      {% block content %}{% endblock %}  
+     </div>
+    
 
   <script>
     // Simple JavaScript for sidebar toggle functionality
