--- a/MarbellaCherrys/core/templates/core/huertos.html
+++ b/MarbellaCherrys/core/templates/core/huertos.html
@@ -56,10 +56,10 @@
                     </td>
                     <td class="text-center">
                         <div class="action-buttons">
-                            <a href="" class="btn btn-sm btn-edit" title="Editar">
+                            <a href="{% url 'editar_huerto' huerto.id %}" class="btn btn-sm btn-edit" title="Editar">
                                 <i class="fas fa-edit"></i>
                             </a>
-                            <a href="#" class="btn btn-sm btn-view" title="Ver detalles">
+                            <a href="{% url 'detalle_huerto' huerto.id %}" class="btn btn-sm btn-view" title="Ver detalles">
                                 <i class="fas fa-eye"></i>
                             </a>
                         </div>
