--- a/MarbellaCherrys/core/templates/core/huertos.html
+++ b/MarbellaCherrys/core/templates/core/huertos.html
@@ -62,6 +62,9 @@
                             <a href="{% url 'detalle_huerto' huerto.id %}" class="btn btn-sm btn-view" title="Ver detalles">
                                 <i class="fas fa-eye"></i>
                             </a>
+                            <a href="{% url 'eliminar_huerto' huerto.id %}" class="btn btn-sm btn-danger" title="Eliminar">
+                                <i class="fas fa-trash"></i>
+                            </a>
                         </div>
                     </td>
                 </tr>
