--- a/MarbellaCherrys/core/templates/core/base.html
+++ b/MarbellaCherrys/core/templates/core/base.html
@@ -51,13 +51,13 @@
               <li class="{% if request.path == '/insumos/' %}active{% endif %}">
                 <a href="{% url 'insumos' %}">
                   <i class="fas fa-boxes icon"></i>
-                  <span>Maestros Insumos</span>
+                  <span>Maestro Insumos</span>
                 </a>
               </li>
               <li class="{% if request.path == '/maestroherrero/' %}active{% endif %}">
                 <a href="{% url 'maestroherrero' %}">
                   <i class="fas fa-tools icon"></i>
-                  <span>Maestros Herrero</span>
+                  <span>Maestro Herrero</span>
                 </a>
               </li>
               <li class="{% if request.path == '/proveedores/' %}active{% endif %}">
