--- a/MarbellaCherrys/core/templates/core/insumo_confirm_delete.html
+++ b/MarbellaCherrys/core/templates/core/insumo_confirm_delete.html
@@ -12,7 +12,7 @@
         <div class="card-body">
             <form method="post">
                 {% csrf_token %}
-                <p>¿Estás seguro que deseas eliminar el insumo <strong>{{ insumo.nombre }}</strong> ({{ insumo.codigo }})?</p>
+                <p>¿Estás seguro que deseas eliminar el insumo <strong>{{ insumo.nombre }}</strong> ({{ insumo.id }})?</p>
                 <p class="text-danger">Esta acción no se puede deshacer.</p>
                 
                 <div class="form-footer">
